# inc_feo

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  rustfmt.toml
.github/workflows/: ci.yml
components/feo/docs/architecture/: architecture.rst
components/feo/docs/concepts/: 01_design_manifest.rst
components/feo/docs/requirements/: requirements.rst
docker/: Dockerfile  README.md
examples/: BUILD.bazel
examples/hello/docs/docs/: sequence_hello.puml  static_hello.puml
examples/rust/feo-mini-adas/: BUILD.bazel  Cargo.toml  README.md  build.rs
examples/rust/feo-mini-adas/src/: activities.cpp  config.rs  ffi.rs  lib.rs
examples/rust/feo-mini-adas/src/activities/: components.rs  messages.rs
examples/rust/greeter/: BUILD.bazel  Cargo.toml
examples/rust/greeter/src/: main.rs
examples/rust/greetings/: BUILD.bazel
examples/rust/greetings/src/: lib.rs
examples/rust/greetings/tests/: smoke.rs
examples/rust/mini-adas-recording/: BUILD.bazel  Cargo.toml  README.md
examples/rust/mini-adas-recording/src/: config.rs  lib.rs
examples/rust/mini-adas-recording/src/activities/: components.rs  messages.rs  mod.rs
examples/rust/mini-adas-recording/src/include/: activities.h
feo/: BUILD.bazel  Cargo.toml  README.md
feo-log/: BUILD.bazel  Cargo.toml
feo-log/examples/: hello.cc  hello.rs
feo-log/include/: log.h
feo-log/src/: ffi.rs  lib.rs  log.cc
feo-logger/: BUILD.bazel  Cargo.toml  README.md
feo-logger/include/: logger.h
feo-logger/src/: console.rs  ffi.rs  fmt.rs  lib.rs  logd.rs  logger.cc  record.rs  thread.rs
feo-time/: BUILD.bazel  Cargo.toml
feo-time/examples/: time_speedrun.rs
feo-time/include/: feo_time.h
feo-time/src/: ffi.rs  lib.rs  tests.rs
feo-time/tests/: time_test.cc
feo-tracer/: BUILD.bazel  Cargo.toml
feo-tracer/src/: data.rs  io.rs  lib.rs  main.rs  perfetto.rs  progress.rs
feo-tracing/: BUILD.bazel  Cargo.toml  README.md
feo-tracing/examples/: hello_tracing.rs
feo-tracing/src/: lib.rs  protocol.rs  subscriber.rs
feo/src/: activity.rs  error.rs  lib.rs  timestamp.rs
feo/src/agent/: mod.rs  primary.rs  secondary.rs
feo/src/com/: backend_iceoryx2.rs  interface.rs  mod.rs
feo/src/configuration/: mod.rs  primary_agent.rs  secondary_agent.rs  topics.rs  worker_pool.rs
feo/src/recording/: mod.rs  recorder.rs  registry.rs  transcoder.rs
feo/src/signalling/: inter_proc_socket.rs  interface.rs  intra_proc_mpsc.rs  mod.rs  signals.rs
feo/src/worker_pool/: mod.rs  pool.rs  worker.rs
feo/tests/: smoke.rs
logd/: BUILD.bazel  Cargo.toml
logd/examples/: client_packet.rs  client_stream.rs
logd/src/: input.rs  lib.rs  main.rs
perfetto-model/: BUILD.bazel  Cargo.toml  README.md  build.rs
perfetto-model/protos/: perfetto_trace.proto
perfetto-model/src/: lib.rs
qor-core/: BUILD.bazel
qor-feo/: BUILD.bazel  Cargo.toml
qor-feo/src/: activity.rs  agent.rs  executor.rs  lib.rs
qor-os/: BUILD.bazel
qor-rto/: BUILD.bazel
qor-rto/examples/agent/: activity.rs  agent.rs  main.rs
qor-rto/examples/executor/: executor.rs  main.rs
tools/format/: BUILD.bazel
