[workspace]
members = [
    "examples/rust/feo-mini-adas",
    "examples/rust/greeter",
    "examples/rust/greetings",
    "examples/rust/mini-adas-recording",
    "feo",
    "feo-log",
    "feo-logger",
    "feo-time",
    "feo-tracer",
    "feo-tracing",
    "logd",
    "perfetto-model",
    "qor-core",
    "qor-os",
    "qor-rto",
    "qor-feo",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.49"
argh = "0.1.13"
async-stream = "0.3.6"
bytes = "1.9.0"
cc = "1.2.7"
console = "0.15.10"
env_logger = "0.11.5"
feo = { path = "feo", default-features = false }
feo-log = { path = "feo-log" }
feo-logger = { path = "feo-logger" }
feo-time = { path = "feo-time" }
feo-tracing = { path = "feo-tracing" }
futures = "0.3.31"
greetings = { path = "examples/rust/greetings" }
human_bytes = "0.4.3"
iceoryx2 = "0.5.0"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
libc = "0.2"
log = { version = "0.4.22", features = ["std"] }
mio = { version = "1.0.2", features = ["net", "os-poll"] }
perfetto-model = { path = "perfetto-model" }
postcard = "1.1.1"
prost = "0.13.4"
prost-build = "0.13.4"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.1"
socket2 = "0.5.8"
time = { version = "0.3.37", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.42.0", features = [
    "rt",
    "macros",
    "sync",
    "net",
    "time",
    "signal",
] }
tokio-seqpacket = "0.8.0"
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
tracing = { version = "0.1.41", features = [
    "attributes",
], default-features = false }
tracing-serde-structured = "0.4.0"
tracing-subscriber = { version = "0.3.19", default-features = false }

[profile.profiling]
inherits = "release"
debug = true
