load("@rules_cc//cc:defs.bzl", "cc_library")
load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_library",
    "rust_static_library",
    "rust_test",
)

# Rust library
rust_library(
    name = "libfeo_time_rust",
    srcs = [
        "src/ffi.rs",
        "src/lib.rs",
        "src/tests.rs",
    ],
    crate_name = "feo_time",
    visibility = ["//visibility:public"],
)

# CC library
cc_library(
    name = "libfeo_time_c",
    srcs = ["include/feo_time.h"],
    hdrs = ["include/feo_time.h"],
    includes = ["include"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [":libfeo_time_ffi_rust"],
)

# FFI wrapper
rust_static_library(
    name = "libfeo_time_ffi_rust",
    srcs = [
        "src/ffi.rs",
        "src/lib.rs",
    ],
    deps = ["//feo-time:libfeo_time_rust"],
)

# Rust library tests
rust_test(
    name = "libfeo_time_test",
    crate = ":libfeo_time_rust",
    deps = [],
)

# C/C++ library tests
cc_test(
    name = "libfeo_time_cc_test",
    size = "small",
    srcs = ["tests/time_test.cc"],
    deps = [
        ":libfeo_time_c",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

rust_binary(
    name = "feo_time_example_speedrun",
    srcs = [
        "examples/time_speedrun.rs",
    ],
    deps = [
        ":libfeo_time_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
    ],
)
