load("@cargo//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "libfeo_tracing_rust",
    srcs = [
        "src/lib.rs",
        "src/protocol.rs",
        "src/subscriber.rs",
    ],
    crate_name = "feo_tracing",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//feo-log:libfeo_log_rust",
    ],
)

rust_binary(
    name = "feo_tracing_example_rust",
    srcs = [
        "examples/hello_tracing.rs",
    ],
    deps = all_crate_deps(
        normal = True,
    ) + [
        ":libfeo_tracing_rust",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
    ],
)
