load("@cargo//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libfeo_rust",
    srcs = [
        "src/activity.rs",
        "src/agent/mod.rs",
        "src/agent/primary.rs",
        "src/agent/secondary.rs",
        "src/com/backend_iceoryx2.rs",
        "src/com/interface.rs",
        "src/com/mod.rs",
        "src/configuration/mod.rs",
        "src/configuration/primary_agent.rs",
        "src/configuration/secondary_agent.rs",
        "src/configuration/topics.rs",
        "src/configuration/worker_pool.rs",
        "src/error.rs",
        "src/lib.rs",
        "src/recording/mod.rs",
        "src/recording/recorder.rs",
        "src/recording/registry.rs",
        "src/recording/transcoder.rs",
        "src/signalling/inter_proc_socket.rs",
        "src/signalling/interface.rs",
        "src/signalling/intra_proc_mpsc.rs",
        "src/signalling/mod.rs",
        "src/signalling/signals.rs",
        "src/timestamp.rs",
        "src/worker_pool/mod.rs",
        "src/worker_pool/pool.rs",
        "src/worker_pool/worker.rs",
    ],
    crate_features = ["ipc_iceoryx2"],
    crate_name = "feo",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//feo-log:libfeo_log_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
    ],
)

rust_library(
    name = "libfeo_recording_rust",
    srcs = [
        "src/activity.rs",
        "src/agent/mod.rs",
        "src/agent/primary.rs",
        "src/agent/secondary.rs",
        "src/com/backend_iceoryx2.rs",
        "src/com/interface.rs",
        "src/com/mod.rs",
        "src/configuration/mod.rs",
        "src/configuration/primary_agent.rs",
        "src/configuration/secondary_agent.rs",
        "src/configuration/topics.rs",
        "src/configuration/worker_pool.rs",
        "src/error.rs",
        "src/lib.rs",
        "src/recording/mod.rs",
        "src/recording/recorder.rs",
        "src/recording/registry.rs",
        "src/recording/transcoder.rs",
        "src/signalling/inter_proc_socket.rs",
        "src/signalling/interface.rs",
        "src/signalling/intra_proc_mpsc.rs",
        "src/signalling/mod.rs",
        "src/signalling/signals.rs",
        "src/timestamp.rs",
        "src/worker_pool/mod.rs",
        "src/worker_pool/pool.rs",
        "src/worker_pool/worker.rs",
    ],
    crate_features = [
        "ipc_iceoryx2",
        "recording",
    ],
    crate_name = "feo",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//feo-log:libfeo_log_rust",
        "//feo-time:libfeo_time_rust",
        "//feo-tracing:libfeo_tracing_rust",
        "@cargo//:postcard",
        "@cargo//:serde",
    ],
)
