load("@cargo//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "logd",
    srcs = [
        "src/main.rs",
    ],
    crate_name = "logd",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        ":liblogd",
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
    ],
)

rust_library(
    name = "liblogd",
    srcs = [
        "src/input.rs",
        "src/lib.rs",
    ],
    crate_name = "logd",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//feo-log:libfeo_log_rust",
        "//feo-logger:libfeo_logger_rust",
    ],
)

rust_test(
    name = "liblogd_test",
    crate = ":liblogd",
)
