load("@cargo//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

rust_library(
    name = "libperfetto_model_rust",
    srcs = [
        "src/lib.rs",
    ],
    crate_name = "perfetto_model",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        ":build_script",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    aliases = aliases(),
    data = glob(["protos/**"]),
    deps = all_crate_deps(
        build = True,
    ),
)
