load("@cargo//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libqor_feo",
    srcs = glob([
        "src/*.rs",
    ]),
    crate_name = "qor_feo",
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//qor-rto:libqor_rto",
    ],
)